# nsp-crisma-app

./: .gitignore  vercel.json
backend/api/: Cargo.toml
backend/api/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  tests.rs
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: clerk.config.ts  middleware.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/catechists/: page.tsx
frontend/src/app/catechists/[id]/: page.tsx
frontend/src/app/components/: AddConfirmandForm.tsx  EditConfirmandModal.tsx  Header.tsx  ImportModal.tsx  SearchableDropdown.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/groups/: page.tsx
frontend/src/app/groups/[id]/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/participants/: page.tsx
frontend/src/app/participants/[id]/: page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: useApiClient.ts  utils.ts
frontend/src/types/: index.ts
