[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database (Postgres)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12" # A robust connection pooler

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment Variables & Config
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"